fixed header width to avoid overflow

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -1,5 +1,5 @@
 .header {
-  width: 100vw;
+  width: 100%;
   margin-bottom: 1rem;
   display: flex;
   flex-flow: row nowrap;
